GNOME Bugzilla – Bug 775142
Fix startup notification under Wayland
Last modified: 2016-11-26 18:44:44 UTC
I noticed that under the Wayland session Totem isn't correctly passing the startup notification info. This is needed to make the gnome-software window correctly pop in front of other windows when searching for codecs.
Created attachment 340802 [details] [review] missing plugins: Fix startup notification on Wayland
Needs a little more explanation in the commit message. Looks fine to commit to master, gnome-3-22 and gnome-3-20 as well.
Attachment 340802 [details] pushed as cbe1363 - missing plugins: Fix startup notification on Wayland Thanks, pushed to both master and gnome-3-22. I don't think it's necessary to have it in 3.20 as the Wayland startup notification support landed only in gtk+ 3.22.4 and is missing on 3.20.
Sorry, I spoke too early -- there's no gnome-3-22 branch, so it's just on master now :)