missing plugins: Fix startup notification on Wayland

Make sure to pass on the startup notification info on other platforms as
well, not just X11. With this, the Shell can correctly raise the
gnome-software window that's handling the missing codec search.

https://bugzilla.gnome.org/show_bug.cgi?id=775142