src/backend/bacon-video-widget-gst-missing-plugins.c
@@ -238,7 +238,6 @@ on_plugin_installation_done (GstInstallPluginsReturn res, gpointer user_data)
 	bacon_video_widget_gst_codec_install_context_free (ctx);
 }
 
-#ifdef GDK_WINDOWING_X11
 static void
 set_startup_notification_id (GstInstallPluginsContext *install_ctx)
 {
@@ -250,7 +249,6 @@ set_startup_notification_id (GstInstallPluginsContext *install_ctx)
 	gst_install_plugins_context_set_startup_notification_id (install_ctx, startup_id);
 	g_free (startup_id);
 }
-#endif
 
 static gboolean
 bacon_video_widget_start_plugin_installation (TotemCodecInstallContext *ctx,
@@ -265,6 +263,7 @@ bacon_video_widget_start_plugin_installation (TotemCodecInstallContext *ctx,
 	install_ctx = gst_install_plugins_context_new ();
 	gst_install_plugins_context_set_desktop_id (install_ctx, "org.gnome.Totem.desktop");
 	gst_install_plugins_context_set_confirm_search (install_ctx, confirm_search);
+	set_startup_notification_id (install_ctx);
 
 #ifdef GDK_WINDOWING_X11
 	display = gdk_display_get_default ();
@@ -274,8 +273,6 @@ bacon_video_widget_start_plugin_installation (TotemCodecInstallContext *ctx,
 	    gtk_widget_get_realized (GTK_WIDGET (ctx->bvw)))
 	{
 		gulong xid = 0;
-
-		set_startup_notification_id (install_ctx);
 
 		xid = bacon_video_widget_gst_get_toplevel (GTK_WIDGET (ctx->bvw));
 		gst_install_plugins_context_set_xid (install_ctx, xid);
